syntax = "proto3";

package service;

option go_package = "./rpc";

service KVRaft {
  rpc PutAppend (PutAppendArgs) returns (PutAppendReply) {}
  rpc Get (GetArgs) returns (GetReply) {}
}

message PutAppendArgs {
  string key = 1;
  string value = 2;
  string op = 3;

  int64 client_id = 4;
  int64 req_id = 5;
}

message PutAppendReply {
  string err = 1;
}

message GetArgs {
  string key = 1;
  int64 client_id = 2;
  int64 req_id = 3;
}

message GetReply {
  string err = 1;
  string value = 2;
}