syntax = "proto3";
option go_package = "./protobuf";

// 1
message VoteRequest {
    int64 term = 1;
	int64 candidate_id = 2;
    int64 last_log_idx = 3;
    int64 last_log_term = 4;
}

// 2
message VoteReply {
	int64 req_term = 1;
	int64 term = 2;
	bool vote_granted = 3;
}

// be used in AppendEntriesRequest
message CommandEntry {
	int64 command_index = 1;
	int64 command_term = 2;
    string command_type = 3;
    bytes command_bytes = 4;
}

// 3
message AppendEntriesRequest {
	int64 term = 1;
	int64 leader_id = 2;
	int64 pre_log_index = 3;
	int64 pre_log_term = 4;
	// may send more than one for efficiency
	// empty for heartbeat
    repeated CommandEntry entries = 5;
	int64 leader_commit = 6;
}

// 4
message AppendEntriesReply {
	int64 id = 1;
	int64 req_term = 2;
    int64 term = 3;
    int64 pre_index = 4;
	bool success = 5;
	int64 n_logs_in_request = 6;
	// 实现简化版本的快速回退
	int64 conflict_index = 7;
}

// 5
message InstallSnapshotRequest {
	int64 term = 1;
	int64 leader_id = 2;
	int64 last_included_index = 3;
	int64 last_included_term = 4;
	bytes snapshot = 5;
}

// 6
message InstallSnapshotReply {
	int64 req_term = 1;
	int64 req_last_included_index = 2;
	int64 req_last_included_term = 3;
	int64 id = 4;
	int64 term = 5;
}